--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,14 @@
 		<meta name="description" content="SyncPod Statistics Dashboard">
 		<title>SyncPod Statistics Dashboard</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
+		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	</head>
-
+<style>
+body {
+	margin-top: 2em;
+}
+</style>
 	<body>
 		<div class="container">
 			<h1>SyncPod Statistics Dashboard</h1>
@@ -15,8 +21,27 @@
 			<h3>Room</h3>
 			<p>How many users does join to the room?</p>
 
-			<div class="row">
+			<div id="statistics_room" style="width: 100%; height: 200px;">
 			</div>
 		</div> <!-- /container -->
 	</body>
 </html>
+<script type="text/javascript">
+google.charts.load('current', {'packages':['corechart']});
+	
+google.charts.setOnLoadCallback(drawChart);
+	
+function drawChart() {
+	var jsonData = $.ajax({
+		url: "/api/v1/status/room",
+		dataType: "json",
+		async: false
+	}).responseText;
+	
+	var data = new google.visualization.DataTable(jsonData);
+
+	var chart = new google.visualization.LineChart(document.getElementById('statistics_room'));
+	chart.draw(data);
+}
+
+</script>
