--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@ function drawChart() {
 	
 	var data = new google.visualization.DataTable(jsonData);
 
-	var chart = new google.visualization.ColumnChart(document.getElementById('statistics_room'));
+	var chart = new google.visualization.LineChart(document.getElementById('statistics_room'));
 	chart.draw(data, {
 		vAxis: {
 			format: '#',
-			ticks: [0, 10, 20, 30, 40, 50],
+//			ticks: [0, 10, 20, 30, 40, 50],
 			minValue: 0,
 		},
 		connectSteps: false,
